--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+如果你有什么问题，可以issue留言或者直接联系邮箱jianghaifeng1999@163.com
+If you have any questions, you can leave a message or contact the mailbox directly jianghaifeng1999@163.com
 ###########################################################
 ######## Reference System based on iris modality ##########
 ###########################################################
